fix: bg-img z-index

--- a/client/src/StyleSheets/index.css
+++ b/client/src/StyleSheets/index.css
@@ -14,7 +14,7 @@ body::before {
 	right: 0px;
 	bottom: 0px;
 	left: 0px;
-	z-index: -1;
+	z-index: 0;
 	background: url(../../src/images/1.jpg);
 	filter: invert(94%);
 	background-position-y: center;
